# my-website

./: Cargo.toml  LICENSE  README.md
scripts/: create_db.sh  init.sql
src/: main.rs
templates/: index.html
